添加内容审批状态。修改修改修改BUG

--- a/app/src/main/res/layout/activity_add_plan_or_summary.xml
+++ b/app/src/main/res/layout/activity_add_plan_or_summary.xml
@@ -365,7 +365,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="问题和需要配合的项" />
+                        android:text="遇到的问题及解决办法" />
 
                     <EditText
                         android:id="@+id/need_help"
