--- a/app/src/main/res/layout/activity_weekly_report_detail.xml
+++ b/app/src/main/res/layout/activity_weekly_report_detail.xml
@@ -348,7 +348,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="问题和需要配合的项" />
+                        android:text="遇到的问题及解决办法" />
 
                     <TextView
                         android:id="@+id/detail_need_help"
