--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -7,33 +7,44 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
-    <ImageView
-        android:id="@+id/actionbar_back"
+
+    <RelativeLayout
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="center"
+        android:layout_height="match_parent"
         android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/actionbar_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="center"
+            app:srcCompat="@drawable/back" />
+    </RelativeLayout>
 
-
-    <ImageView
-        android:id="@+id/action_menu"
+    <RelativeLayout
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="center"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/jiahao" />
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/action_menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="center"
+            android:visibility="gone"
+            app:srcCompat="@drawable/jiahao" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="match_parent"
