添加項目統計信息，修復部分軟件BUG

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#3dd078</color>
     <color name="color_status_bar">#3dd078</color>
     <color name="color_gray">#F5F5F5</color>
+    <color name="dark_gray">#aaa</color>
     <color name="color_black">#000000</color>
 </resources>
