--- a/app/src/main/res/layout/item_content_list_description.xml
+++ b/app/src/main/res/layout/item_content_list_description.xml
@@ -18,6 +18,9 @@
         <variable
             name="workType"
             type="String"></variable>
+        <variable
+            name="approvalStatus"
+            type="String"></variable>
     </data>
 
     <LinearLayout
@@ -160,7 +163,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:background="@drawable/base_line_cf"
             android:orientation="horizontal">
 
             <TextView
@@ -183,6 +186,37 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="end"
                 android:text="@{percentComplete}"
+                android:textAlignment="textEnd"
+                android:textColor="#C5C5C5"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="审批状态"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="end"
+                android:text="@{approvalStatus}"
                 android:textAlignment="textEnd"
                 android:textColor="#C5C5C5"
                 android:textSize="18sp" />
