替换统计表

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="dark_gray">#aaa</color>
     <color name="red">#FF0000</color>
     <color name="color_black">#000000</color>
+    <color name="color_274782">#274782</color>
 </resources>
