--- a/app/src/main/res/layout/fragment_project_statistics.xml
+++ b/app/src/main/res/layout/fragment_project_statistics.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.fragment.ProjectStatisticsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:id="@+id/intent_statistic_activity"
-        android:text="单机此处查看项目统计信息" />
+        tools:context=".activity.fragment.ProjectStatisticsFragment">
 
-</FrameLayout>
+        <!-- TODO: Update blank fragment layout -->
+
+        <HorizontalScrollView
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.aorise.weeklyreport.view.ChartView
+                android:id="@+id/mChartView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </HorizontalScrollView>
+    </FrameLayout>
 </layout>
