--- a/app/src/main/res/layout/fragment_project_statistics.xml
+++ b/app/src/main/res/layout/fragment_project_statistics.xml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <data>
+        <variable
+            name="projectName"
+            type="String"/>
+        <variable
+            name="projectInfo"
+            type="String"/>
+    </data>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.fragment.ProjectStatisticsFragment">
 
         <!-- TODO: Update blank fragment layout -->
-
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:textSize="18sp"
+            android:gravity="center_horizontal"
+            android:text="@{projectName}"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:textSize="12sp"
+            android:text="@{projectInfo}"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content" />
         <HorizontalScrollView
             android:scrollbars="none"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -19,5 +42,5 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </HorizontalScrollView>
-    </FrameLayout>
+    </LinearLayout>
 </layout>
