--- a/app/src/main/res/layout/activity_add_plan_or_summary.xml
+++ b/app/src/main/res/layout/activity_add_plan_or_summary.xml
@@ -401,7 +401,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginBottom="10dp"
-                            android:text="计划完成进度"
+                            android:text="实际完成情况说明"
                             android:textSize="18sp" />
 
                         <EditText
