--- a/app/src/main/res/layout/activity_weekly_report_detail.xml
+++ b/app/src/main/res/layout/activity_weekly_report_detail.xml
@@ -409,7 +409,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:paddingBottom="10dp"
-                    android:text="计划完成进度"
+                    android:text="实际完成情况说明"
                     android:textColor="#A8A8A8"
                     android:textSize="18sp" />
 
