--- a/app/src/main/res/layout/item_stage_content.xml
+++ b/app/src/main/res/layout/item_stage_content.xml
@@ -92,6 +92,38 @@
                 android:textSize="18sp" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/base_line_cf"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="工作计划"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="end"
+                android:text="@{headerReport.specificPhase}"
+                android:textAlignment="textEnd"
+                android:textColor="#C5C5C5"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,7 +151,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="end"
-                android:text="@{headerReport.specificPhase}"
+                android:text="@{headerReport.specificItem}"
                 android:textAlignment="textEnd"
                 android:textColor="#C5C5C5"
                 android:textSize="18sp" />
