--- a/app/src/main/res/layout/fragment_memeber_check.xml
+++ b/app/src/main/res/layout/fragment_memeber_check.xml
@@ -127,13 +127,17 @@
             </LinearLayout>
 
             <!-- TODO: Update blank fragment layout -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="match_parent"
+                android:descendantFocusability="blocksDescendants">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/next_Report_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" />
+                android:layout_height="wrap_content" />
+            </RelativeLayout>
         </LinearLayout>
     </com.aorise.weeklyreport.view.MyScrollview>
 </layout>
