--- a/app/src/main/res/layout/activity_add_plan_or_summary.xml
+++ b/app/src/main/res/layout/activity_add_plan_or_summary.xml
@@ -420,7 +420,7 @@
                             android:textSize="18sp" />
                     </LinearLayout>
 
-                    <!--问题和需要配合的项-->
+                    <!--问题和需要配合的事项-->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -434,7 +434,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginBottom="18dp"
-                            android:text="遇到的问题及解决办法"
+                            android:text="问题和需要配合的事项"
                             android:textSize="18sp" />
 
                         <EditText
