--- a/app/src/main/res/layout/activity_weekly_report_detail.xml
+++ b/app/src/main/res/layout/activity_weekly_report_detail.xml
@@ -443,7 +443,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:paddingBottom="10dp"
-                    android:text="遇到的问题及解决办法"
+                    android:text="问题和需要配合的事项"
                     android:textColor="#A8A8A8"
                     android:textSize="18sp" />
 
