--- a/app/src/main/res/layout/activity_settings_next_week_plan.xml
+++ b/app/src/main/res/layout/activity_settings_next_week_plan.xml
@@ -105,6 +105,54 @@
 
                 </RelativeLayout>
             </LinearLayout>
+            <!--责任人-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/base_line">
+
+                <TextView
+                    android:id="@+id/owner_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="责任人"
+                    android:textSize="18sp" />
+
+                <RelativeLayout
+                    android:id="@+id/owner_area"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/owner_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:layout_toLeftOf="@+id/owner_img"
+                        android:gravity="end"
+                        android:text="请选择责任人"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:id="@+id/owner_img"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/dropdown" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
             <!--项目计划-->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -194,35 +242,7 @@
 
                 </LinearLayout>
             </RelativeLayout>
-            <!--责任人-->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/base_line">
 
-                <TextView
-                    android:id="@+id/owner_name_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="责任人"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/owner_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/owner_name_txt"
-                    android:gravity="end"
-                    android:text="请选择责任人"
-                    android:textSize="18sp" />
-            </RelativeLayout>
             <!--具体工作事项-->
             <LinearLayout
                 android:layout_width="match_parent"
