修改工时统计BUG，添加搜索条件，在项目列表时搜索项目工作，则展示项目工作，搜索部门工作，则展示类型为2的部门工作

--- a/app/src/main/res/layout/fragment_new_home.xml
+++ b/app/src/main/res/layout/fragment_new_home.xml
@@ -183,7 +183,7 @@
             android:layout_height="0dp">
             <ImageView
                 android:layout_gravity="center"
-                android:src="@drawable/weekly_icon"
+                android:src="@drawable/performance_icon"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
