--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#FF0000</color>
     <color name="color_black">#000000</color>
     <color name="color_274782">#274782</color>
+    <color name="color_ffffff">#ffffff</color>
 </resources>
