--- a/app/src/main/res/layout/activity_choose_project.xml
+++ b/app/src/main/res/layout/activity_choose_project.xml
@@ -13,6 +13,10 @@
             android:id="@+id/choose_project_actionbar"
             layout="@layout/actionbar"></include>
 
+        <include
+            android:id="@+id/choose_search"
+            layout="@layout/search_view"></include>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/project_list"
             android:layout_width="match_parent"
@@ -21,10 +25,11 @@
             android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
 
         <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
-            android:visibility="gone"
             android:id="@+id/member_plt_choose"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/member_list"
                 android:layout_width="match_parent"
