--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -129,8 +129,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/last_Report_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-             />
+                    android:layout_height="wrap_content" />
             </RelativeLayout>
 
             <!-- TODO: Update blank fragment layout -->
