新增拦截器，修复软件bug

--- a/app/src/main/res/layout/activity_choose_project.xml
+++ b/app/src/main/res/layout/activity_choose_project.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
+            android:layout_marginRight="10dp"/>
 
         <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
             android:id="@+id/member_plt_choose"
